--- a/Bt2/Dockerfile
+++ b/Bt2/Dockerfile
@@ -1,12 +1,5 @@
-# Stage 1: Build Maven
-FROM maven:3.9.6-eclipse-temurin-17 AS builder
-WORKDIR /app
-COPY . .
-RUN mvn clean package -DskipTests
-
-# Stage 2: Tomcat
-FROM tomcat:9.0-jdk17-temurin
+FROM tomcat:9.0-jdk11
 RUN rm -rf /usr/local/tomcat/webapps/*
-COPY --from=builder /app/target/*.war /usr/local/tomcat/webapps/ROOT.war
+COPY Bt2.war /usr/local/tomcat/webapps/ROOT.war
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
